# finance-board

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/backend/: app.py  config.py  flask_app.py
app/backend/models/: account.py  db.py  e_balance_crypto.py  e_deposit.py  e_fx_rate.py  e_invoice.py  e_real_estate_land_plot.py  e_stock_cash_transfer.py  e_stock_dividend.py  e_stock_portfolio.py  e_stock_transaction.py  e_transaction.py  m_account.py  m_account_crypto.py  m_client.py  m_currency.py  m_execution_venue.py  m_isin.py  m_order_class.py  m_order_type.py  m_reference_exchange.py  m_stock_account.py  transaction.py
app/backend/models/portfolio/: portfolio.py  stock.py  stock_value.py
app/backend/models/real_estate/: e_real_estate_land_plot.py  e_real_estate_land_plot_comparable.py  e_real_estate_land_plot_comparable_geolocated.py
app/backend/models/stock/: e_stock_price.py  e_stock_price_15min.py  e_stock_symbol.py
app/backend/routes/api/: apex.py  api.py
app/backend/routes/dashboard/: dashboard.py
app/backend/routes/dashboard/templates/dashboard/: dashboard.html  test-stacked-column-1-hardcoded.html  test-stacked-column-2-array.html  test-stacked-column-3-dynamic.html  test-stacked-column-4-tooltip.html  test-stacked-column-5-category.html  test_dashboard.html
app/backend/routes/imports/: imports.py
app/backend/routes/imports/templates/imports/: index.html  tpl_bankinter.html  tpl_bbva.html  tpl_binance.html  tpl_degiro.html  tpl_imagin.html  tpl_import_index.html  tpl_norma43.html  tpl_receipts.html  tpl_revolut.html  tpl_stock.html  tpl_trade_republic.html  tpl_trade_republic_csv.html  ui_select_account.html
app/backend/routes/imports/utils/: get_last_movement.py  mindee_utils.py  process_bbva.py
app/backend/routes/imports/utils/bankinter/: process_bankinter.py
app/backend/routes/imports/utils/bbva/: process_bbva.py
app/backend/routes/imports/utils/binance/: get_account_balance.py
app/backend/routes/imports/utils/csb43/: get_csb43_movements.py  process_csb43.py
app/backend/routes/real_estate/: real_estate.py
app/backend/routes/stocks/: stocks.py
app/backend/static/css/: colors.css  sidebars.css  styles.css
app/backend/static/js/: alerts.js  fetch.js
app/backend/templates/: base.html
app/backend/utils/: bank_statement.py  transaction_series.py
app/backend/utils/logger/: operation_logger.py
app/backend/utils/receipts/: prediction.py  transaction.py  utils.py
app/backend/utils/stock/: calculate_portfolio.py  stock_api.py
app/integrations/twelve_data/: stock_api.py
docs/db/: pgadmin.md  postgres.md
etl/: etl_fx_rates.py  etl_prices_portfolio.py  get_prices.py
etl/fx/: get_fx_rates.py
etl/stock/: get_prices.py
tests/tests_utils/test_stock/: test_stockapi.py
(+38 files in other folders)
