[tool.poetry]
name = "finance-board"
version = "0.1.0"
description = ""
authors = ["apetrovici <alejandropetrovici@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10" # to use only in development

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 180

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
strict = true