[tool.poetry]
name = "finance-board"
version = "0.1.0"
description = ""
authors = ["apetrovici <alejandropetrovici@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
csb43 = "^1.0.0"  # bank statement parser
pyyaml = "^6.0.2"  #  used by csb43 for output generation
tablib = "^3.7.0"  #  used by csb43 for output generation
requests = "^2.32.3"
python-binance = "^1.0.27"  # external dependency to connect to binance
orjson = "^3.10.14"  # used by python-binance even if is not a direct dependency

# web server
fastapi = "^0.128.4"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"

# database
sqlalchemy = "^2.0.46"
psycopg2-binary = "^2.9.10" # to use only in development

# xls files
pandas = "^2.3.1"
xlrd = "^2.0.2"
openpyxl = "^3.1.5"

# Receipts processing API
mindee = "^4.31.0"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
types-python-dateutil = "^2.9.0.20241206"
types-requests = "^2.32.0.20241016"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 180

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
strict = true